cluster/apps/charts/vllm/vllm-deployment.yaml

# https://docs.vllm.ai/en/latest/deployment/docker/?h=docker
# https://docs.vllm.ai/en/stable/deployment/k8s/#deployment-with-gpus

--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vllm
  name: vllm-qwen3-4b
#  namespace: vllm
spec:
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
        app.kubernetes.io/name: vllm # required for Homepage
    spec:
      containers:
        - name: vllm-qwen3-4b
          # https://github.com/vllm-app/vllm/pkgs/container/vllm 
          image: vllm/vllm-openai:latest
          imagePullPolicy: Always
          args: [
            "vllm serve Qwen/Qwen3-4B --trust-remote-code --enable-chunked-prefill --max_num_batched_tokens 1024"
          ]
          ports:
            - containerPort: 8000
              name: vllm-http
              protocol: TCP
          resources:
            limits:
              cpu: "10"
              memory: 20G
              nvidia.com/gpu: "1"
            requests:
              cpu: "2"
              memory: 6G
              nvidia.com/gpu: "1"
          volumeMounts:
          - mountPath: /root/.cache/huggingface
            name: cache-volume
          - name: shm
            mountPath: /dev/shm
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: Qwen3-4B
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-http-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: vllm-http
  selector:
    app: vllm
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #acme.cert-manager.io/http01-ingress-class: nginx-external
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    #acme.cert-manager.io/http01-ingress-class: "nginx-external"
    #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    #nginx.org/ssl-services: "tvheadend-http-svc"
    nginx.org/websocket-services: "vllm-http-svc"        
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600" 
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # allow uploads (aka backups) of up to 100MB
    gethomepage.dev/description: Track and share expenses with friends and family
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Lifestyle
    gethomepage.dev/icon: https://raw.githubusercontent.com/vllm-app/vllm/refs/heads/main/public/logo.svg
    gethomepage.dev/name: vllm

  name: vllm
spec:
  rules:
    - host: vllm.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: vllm-http-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vllm.rockyroad.rocks
      secretName: vllm-tls
---
