cluster/apps/charts/vllm/vllm-network-policy.yaml
# # https://docs.cilium.io/en/stable/security/policy/language/
---
# Allow access to cluster dns
# Note the existance of this policy applies a default deny-all for anything not listed.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden-internet-only
  namespace: vllm
spec:
  endpointSelector: {}  # all pods
  egress:
    - toEndpoints: # need to allow the pods/namespace to contact the cluster DNS service to resolve the FQDNs. 
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system # mandatory and doesn't matter that this label doesn't actually exist on the cluster
            "k8s:k8s-app": kube-dns   # selects the cluster DNS pods, note that the "k8s:" is required to tell Cilium it's not its own label (I think)
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules: # This is mandatory, without this cilium doesn't capture the IP addresses for the FQDN names below to add them to the allow list!
            dns:
              - matchPattern: "*" # allow all DNS lookups

    # Allow access to pods/services in the same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vllm

    # Allow public internet but not local networks
    # - toEntities:
    #     - world # allows access to local networks - not ok!
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            # to test, exec into a pod and try: 
            # curl https://10.20.10.1 -k
            # curl mealie-http-svc.mealie.svc.cluster.local:9000
            # curl https://www.google.com.au
  

# # Testing pod: 

# kubectl -n vllm run test-pod   --rm -i --tty   --image=curlimages/curl:8.1.2   --restart=Never   -- sh
